--- a/pvr.stalker/changelog.txt
+++ b/pvr.stalker/changelog.txt
@@ -1,3 +1,7 @@
+v7.1.2
+- Translations updates from Weblate
+	- af_za, be_by, bg_bg, ca_es, cs_cz, cy_gb, da_dk, de_de, el_gr, en_au, en_gb, en_nz, en_us, es_ar, es_es, es_mx, et_ee, eu_es, fi_fi, fr_ca, fr_fr, gl_es, he_il, hr_hr, hu_hu, hy_am, id_id, is_is, it_it, ja_jp, ko_kr, lt_lt, lv_lv, mk_mk, mn_mn, ms_my, mt_mt, nb_no, nl_nl, pl_pl, pt_br, pt_pt, ro_ro, ru_ru, si_lk, sk_sk, sl_si, sq_al, sr_rs, sr_rs@latin, sv_se, szl, te_in, tg_tj, th_th, tr_tr, uk_ua, vi_vn, zh_cn, zh_tw
+
 v7.1.1
 - Language update from Weblate
 
