--- a/pvr.stalker/changelog.txt
+++ b/pvr.stalker/changelog.txt
@@ -1,3 +1,13 @@
+v20.0.0
+- Translations updates from Weblate
+  - Danish (da_dk)
+  - To allow also addon.xml content update by Weblate
+- Minor cleanups on addon.xml
+- Changed test builds to 'Kodi 20 Nexus'
+- Increased version to 20.0.0
+  - With start of Kodi 20 Nexus, takes addon as major the same version number as Kodi.
+    This done to know easier to which Kodi the addon works.
+
 v7.1.1
 - Language update from Weblate
 
