--- a/pvr.stalker/changelog.txt
+++ b/pvr.stalker/changelog.txt
@@ -1,3 +1,7 @@
+v20.2.1
+- Translations updates from Weblate
+	- be_by, da_dk, es_mx, id_id, is_is, ko_kr, lt_lt, nb_no
+
 v20.2.0
 - Translation updates by Weblate
 - Kodi main API update to version 2.0.0
