--- a/pvr.stalker/changelog.txt
+++ b/pvr.stalker/changelog.txt
@@ -1,3 +1,7 @@
+v19.0.2
+- Updated depends libxml2 to version 2.9.10
+  - To fix some Windows UWP builds
+
 v19.0.1
 - Translations updates from Weblate
 	- be_by, da_dk, es_mx, id_id, is_is, ko_kr, lt_lt, nb_no
