--- a/pvr.stalker/resources/language/resource.language.be_by/strings.po
+++ b/pvr.stalker/resources/language/resource.language.be_by/strings.po
@@ -28,9 +28,7 @@ msgid "PVR Client to connect Kodi to Stalker Middleware"
 msgstr ""
 
 msgctxt "Addon Disclaimer"
-msgid ""
-"This is unstable software! The authors are in no way responsible for failed "
-"recordings, incorrect timers, wasted hours, or any other undesirable effects."
+msgid "This is unstable software! The authors are in no way responsible for failed recordings, incorrect timers, wasted hours, or any other undesirable effects."
 msgstr ""
 
 msgctxt "#30000"
