--- a/pvr.stalker/changelog.txt
+++ b/pvr.stalker/changelog.txt
@@ -1,3 +1,7 @@
+v20.3.1
+- Fix issue #189 : "year" and "starRating" are optional in xmltv contract
+- Fix issue : init episodeNumber to undefined instead of "0"
+
 v20.3.0
 - Kodi inputstream API update to version 3.2.0
 - Kodi PVR API update to version 8.0.2
