--- a/pvr.stalker/resources/language/resource.language.ast_es/strings.po
+++ b/pvr.stalker/resources/language/resource.language.ast_es/strings.po
@@ -5,17 +5,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KODI Main\n"
-"Report-Msgid-Bugs-To: translations@kodi.tv\n"
+"Report-Msgid-Bugs-To: https://github.com/xbmc/xbmc/issues/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2022-04-09 10:13+0000\n"
-"Last-Translator: Christian Gade <gade@kodi.tv>\n"
-"Language-Team: Welsh (United Kingdom) <https://kodi.weblate.cloud/projects/kodi-add-ons-pvr-clients/pvr-stalker/cy_gb/>\n"
-"Language: cy_gb\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: Automatically generated\n"
+"Language-Team: none\n"
+"Language: ast_es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n==1) ? 0 : (n==2) ? 1 : (n != 8 && n != 11) ? 2 : 3;\n"
-"X-Generator: Weblate 4.11.2\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 msgctxt "Addon Summary"
 msgid "PVR Client to connect Kodi to Stalker Middleware"
@@ -27,11 +26,12 @@ msgstr ""
 
 msgctxt "Addon Disclaimer"
 msgid "This is unstable software! The authors are in no way responsible for failed recordings, incorrect timers, wasted hours, or any other undesirable effects."
-msgstr "Mae hwn yn feddalwedd ansad! Nid yw'r awduron yn gyfrifol mewn unrhyw ffordd am fethu recordio, amseru gwallus, oriau wedi eu gwastraffu nac effeithiau anymunol eraill."
+msgstr ""
 
+#settings labels
 msgctxt "#30000"
 msgid "General"
-msgstr "Cyffredinol"
+msgstr ""
 
 msgctxt "#30001"
 msgid "Active Portal"
@@ -45,14 +45,14 @@ msgctxt "#30003"
 msgid "Connection Timeout (seconds)"
 msgstr ""
 
-# empty strings from id 30004 to 30100
+#empty strings from id 30004 to 30100
 msgctxt "#30101"
 msgid "MAC Address"
 msgstr ""
 
 msgctxt "#30102"
 msgid "Server Address"
-msgstr "Cyfeiriad Gweinydd"
+msgstr ""
 
 msgctxt "#30103"
 msgid "Time Zone"
@@ -64,11 +64,11 @@ msgstr ""
 
 msgctxt "#30105"
 msgid "Login"
-msgstr "Mewngofnodi"
+msgstr ""
 
 msgctxt "#30106"
 msgid "Password"
-msgstr "Cyfrinair"
+msgstr ""
 
 msgctxt "#30107"
 msgid "Guide"
@@ -84,7 +84,7 @@ msgstr ""
 
 msgctxt "#30110"
 msgid "Prefer XMLTV"
-msgstr "Ffafrio"
+msgstr ""
 
 msgctxt "#30111"
 msgid "Provider Only"
@@ -120,7 +120,7 @@ msgstr ""
 
 msgctxt "#30119"
 msgid "Advanced"
-msgstr "Uwch"
+msgstr ""
 
 msgctxt "#30120"
 msgid "Token"
@@ -142,7 +142,7 @@ msgctxt "#30124"
 msgid "Signature"
 msgstr ""
 
-# empty strings from id 30125 to 30500
+#empty strings from id 30125 to 30500
 msgctxt "#30501"
 msgid "Unknown error. See log for details."
 msgstr ""
@@ -183,27 +183,27 @@ msgctxt "#30510"
 msgid "Re-authenticated."
 msgstr ""
 
-# empty strings from id 30511 to 30999
+#empty strings from id 30511 to 30999
 msgctxt "#31000"
 msgid "Portal 1"
 msgstr ""
 
-# empty strings from id 31001 to 31999
+#empty strings from id 31001 to 31999
 msgctxt "#32000"
 msgid "Portal 2"
 msgstr ""
 
-# empty strings from id 32001 to 32999
+#empty strings from id 32001 to 32999
 msgctxt "#33000"
 msgid "Portal 3"
 msgstr ""
 
-# empty strings from id 33001 to 33999
+#empty strings from id 33001 to 33999
 msgctxt "#34000"
 msgid "Portal 4"
 msgstr ""
 
-# empty strings from id 34001 to 34999
+#empty strings from id 34001 to 34999
 msgctxt "#35000"
 msgid "Portal 5"
 msgstr ""
