--- a/pvr.stalker/resources/language/resource.language.be_by/strings.po
+++ b/pvr.stalker/resources/language/resource.language.be_by/strings.po
@@ -7,15 +7,17 @@ msgstr ""
 "Project-Id-Version: KODI Main\n"
 "Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2021-09-25 08:30+0000\n"
+"PO-Revision-Date: 2022-02-27 12:13+0000\n"
 "Last-Translator: Christian Gade <gade@kodi.tv>\n"
-"Language-Team: Belarusian <https://kodi.weblate.cloud/projects/kodi-add-ons-pvr-clients/pvr-stalker/be_by/>\n"
+"Language-Team: Belarusian <https://kodi.weblate.cloud/projects/kodi-add-ons-"
+"pvr-clients/pvr-stalker/be_by/>\n"
 "Language: be_by\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Weblate 4.8\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Weblate 4.11\n"
 
 msgctxt "Addon Summary"
 msgid "PVR Client to connect Kodi to Stalker Middleware"
@@ -31,7 +33,7 @@ msgstr ""
 
 msgctxt "#30000"
 msgid "General"
-msgstr "General"
+msgstr "Асноўныя"
 
 msgctxt "#30001"
 msgid "Active Portal"
@@ -84,7 +86,7 @@ msgstr ""
 
 msgctxt "#30110"
 msgid "Prefer XMLTV"
-msgstr ""
+msgstr "Аддаваць перавагу XMLTV"
 
 msgctxt "#30111"
 msgid "Provider Only"
