--- a/pvr.stalker/resources/language/resource.language.et_ee/strings.po
+++ b/pvr.stalker/resources/language/resource.language.et_ee/strings.po
@@ -5,16 +5,17 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KODI Main\n"
-"Report-Msgid-Bugs-To: https://github.com/xbmc/xbmc/issues/\n"
+"Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Kodi Translation Team\n"
-"Language-Team: Estonian (Estonia) (http://www.transifex.com/projects/p/kodi-main/language/et_EE/)\n"
-"Language: et_EE\n"
+"PO-Revision-Date: 2022-08-26 10:14+0000\n"
+"Last-Translator: rimasx <riks_12@hot.ee>\n"
+"Language-Team: Estonian <https://kodi.weblate.cloud/projects/kodi-add-ons-pvr-clients/pvr-stalker/et_ee/>\n"
+"Language: et_ee\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.13\n"
 
 msgctxt "Addon Summary"
 msgid "PVR Client to connect Kodi to Stalker Middleware"
@@ -26,7 +27,7 @@ msgstr "PVR'i klient ühendamaks Kodi Stalker Middleware'ga"
 
 msgctxt "Addon Disclaimer"
 msgid "This is unstable software! The authors are in no way responsible for failed recordings, incorrect timers, wasted hours, or any other undesirable effects."
-msgstr "See on ebastabiilne tarkvara! Autorid ei ole kuidagi moodi vastutavad nurjunud salvestiste, ebaõige aegrelee, raisatud tundide ega muude soovimatute asjade eest."
+msgstr "See on ebastabiilne tarkvara! Autorid ei ole kuidagi moodi vastutavad nurjunud salvestiste, vale taimeri, raisatud aja ega muude soovimatute asjade eest."
 
 msgctxt "#30000"
 msgid "General"
@@ -38,7 +39,7 @@ msgstr ""
 
 msgctxt "#30002"
 msgid "Misc"
-msgstr ""
+msgstr "Muud"
 
 msgctxt "#30003"
 msgid "Connection Timeout (seconds)"
@@ -63,11 +64,11 @@ msgstr ""
 
 msgctxt "#30105"
 msgid "Login"
-msgstr ""
+msgstr "Logi sisse"
 
 msgctxt "#30106"
 msgid "Password"
-msgstr ""
+msgstr "Salasõna"
 
 msgctxt "#30107"
 msgid "Guide"
