--- a/pvr.stalker/resources/language/resource.language.fi_fi/strings.po
+++ b/pvr.stalker/resources/language/resource.language.fi_fi/strings.po
@@ -5,16 +5,17 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KODI Main\n"
-"Report-Msgid-Bugs-To: https://github.com/xbmc/xbmc/issues/\n"
+"Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Kodi Translation Team\n"
-"Language-Team: Finnish (Finland) (http://www.transifex.com/projects/p/kodi-main/language/fi_FI/)\n"
-"Language: fi_FI\n"
+"PO-Revision-Date: 2022-08-26 10:14+0000\n"
+"Last-Translator: Oskari Lavinto <olavinto@protonmail.com>\n"
+"Language-Team: Finnish <https://kodi.weblate.cloud/projects/kodi-add-ons-pvr-clients/pvr-stalker/fi_fi/>\n"
+"Language: fi_fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.13\n"
 
 msgctxt "Addon Summary"
 msgid "PVR Client to connect Kodi to Stalker Middleware"
@@ -26,7 +27,7 @@ msgstr "PVR-asiakasohjelma, joka kytkeytyy Stalker Middlewareen"
 
 msgctxt "Addon Disclaimer"
 msgid "This is unstable software! The authors are in no way responsible for failed recordings, incorrect timers, wasted hours, or any other undesirable effects."
-msgstr "Tämä on epävakaa ohjelma! Sen tekijät eivät ole millään muotoa vastuussa epäonnistuneista tallennuksista, virheellisistä ajastuksista, haaskatusta ajasta, verenpaineen noususta tai mistään muusta epäsuotuisasta vaikutuksesta."
+msgstr "Tämä on epävakaa ohjelmisto! Sen kehittäjät eivät ole millään tavoin vastuussa epäonnistuneista tallennuksista, virheellisistä ajastuksista, hukatusta ajasta tai mistään muusta ei-toivotuista seurauksista."
 
 msgctxt "#30000"
 msgid "General"
@@ -62,7 +63,7 @@ msgstr "Todennustiedot"
 
 msgctxt "#30105"
 msgid "Login"
-msgstr "Käyttäjätunnus"
+msgstr "Kirjautuminen"
 
 msgctxt "#30106"
 msgid "Password"
@@ -162,11 +163,11 @@ msgstr "Kanavien lataaminen ei onnistu."
 
 msgctxt "#30506"
 msgid "Unable to load channel groups."
-msgstr "Kanavaryhmien lataaminen epäonnistui"
+msgstr "Kanavaryhmien lataus epäonnistui."
 
 msgctxt "#30507"
 msgid "Unable to load guide."
-msgstr "Oppaan lataaminen epäonnistui"
+msgstr "Ohjelmaoppaan lataus epäonnistui."
 
 msgctxt "#30508"
 msgid "Failed to get stream URL."
