--- a/pvr.stalker/resources/language/resource.language.sv_se/strings.po
+++ b/pvr.stalker/resources/language/resource.language.sv_se/strings.po
@@ -5,16 +5,17 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KODI Main\n"
-"Report-Msgid-Bugs-To: https://github.com/xbmc/xbmc/issues/\n"
+"Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Kodi Translation Team\n"
-"Language-Team: Swedish (Sweden) (http://www.transifex.com/projects/p/kodi-main/language/sv_SE/)\n"
-"Language: sv_SE\n"
+"PO-Revision-Date: 2022-09-08 07:53+0000\n"
+"Last-Translator: Sopor <sopor@hotmail.com>\n"
+"Language-Team: Swedish <https://kodi.weblate.cloud/projects/kodi-add-ons-pvr-clients/pvr-stalker/sv_se/>\n"
+"Language: sv_se\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.14\n"
 
 msgctxt "Addon Summary"
 msgid "PVR Client to connect Kodi to Stalker Middleware"
@@ -26,11 +27,11 @@ msgstr "PVR-klient för anslutning av Kodi till Stalker Middleware"
 
 msgctxt "Addon Disclaimer"
 msgid "This is unstable software! The authors are in no way responsible for failed recordings, incorrect timers, wasted hours, or any other undesirable effects."
-msgstr "Detta är instabil mjukvara! Upphovsmännen är inte ansvariga för misslyckade inspelningar, inkorrekta timers, bortslösade timmar, eller några andra oönskade effekter."
+msgstr "Detta är instabil mjukvara! Upphovsmännen är inte ansvariga för misslyckade inspelningar, felaktiga timers, bortslösade timmar, eller någon annan oönskad effekt."
 
 msgctxt "#30000"
 msgid "General"
-msgstr "Generellt"
+msgstr "Allmänt"
 
 msgctxt "#30001"
 msgid "Active Portal"
