--- a/pvr.stalker/changelog.txt
+++ b/pvr.stalker/changelog.txt
@@ -1,3 +1,7 @@
+v20.3.2
+- Translations updates from Weblate
+	- es_es, fi_fi, it_it, ja_jp, ru_ru
+
 v20.3.1
 - Fix issue #189 : "year" and "starRating" are optional in xmltv contract
 - Fix issue : init episodeNumber to undefined instead of "0"
